# smart_fridge_backend

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deployment/: Dockerfile  docker-compose.local.yml  docker-compose.yml
docs/: description.odt
migrations/: env.py
migrations/versions/: 2025_01_02_1611-3f1e06132284.py  2025_01_02_1820-7f859c57d55a.py  2025_01_09_1719-503e86ecd098.py  2025_01_09_1753-55b6b595e5b2.py  2025_01_11_2003-499346fa02c0.py  2025_01_16_0849-c5c0f5fd4bd3.py
smart_fridge/: __main__.py  app.py  bot.py  main.py
smart_fridge/bot/handlers/: __init__.py  common.py
smart_fridge/bot/middlewares/: error.py
smart_fridge/bot/schedule/: scheduler.py
smart_fridge/cli/: cli.py
smart_fridge/core/: config.py  security.py
smart_fridge/core/dependencies/: aiogram.py  constructors.py  fastapi.py
smart_fridge/core/exceptions/: abc.py  auth.py  auth_session.py  cart_product.py  fridge.py  fridge_product.py  handler.py  hendler.py  product.py  product_type.py  schema.py  user.py
smart_fridge/lib/db/: auth.py  auth_session.py  cart_product.py  fridge.py  fridge_product.py  product.py  product_type.py  statistics.py  user.py
smart_fridge/lib/models/: __init__.py  auth_session.py  cart_product.py  fridge.py  fridge_product.py  product.py  product_type.py  user.py
smart_fridge/lib/schemas/: auth.py  auth_session.py  cart_product.py  fields.py  fridge.py  fridge_product.py  job.py  pagination.py  product.py  product_type.py  statistics.py  user.py
smart_fridge/lib/utils/: filter.py  (+1 more)
smart_fridge/routers/: __init__.py
(+12 files in other folders)
